# osdc_backend

./: .env_example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  env_examle_local  pyproject.toml  requirements.txt  setup.cfg  temporary
.github/workflows/: main.yml
backend/: Dockerfile  osdc  requirements.txt
backend/api/: email.py  exception_handler.py  exceptions.py  permissions.py  serializers.py  swagger.py  urls.py  views.py
backend/api/api/: settings.py
backend/api/tests/: fixtures.py  test_api.py  test_serializers.py  test_views.py
backend/backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/core/: admin.py  consts.py  models.py  validators.py
backend/core/core/: settings.py
backend/core/migrations/: 0001_initial.py  0002_auto_20231105_2035.py  0002_initial.py  0003_alter_card_shop.py  0003_alter_usercards_options_usercards_favourite.py  0003_auto_20231106_1155.py  0003_auto_20231106_1843.py  0003_auto_20231115_1539.py  0004_alter_usercards_owner.py  0004_auto_20231106_1901.py  0004_merge_20231116_2048.py  0005_alter_shop_group_alter_shop_logo.py  0005_alter_shop_name.py  0005_remove_card_usage_counter_usercards_usage_counter.py  0006_alter_card_owner.py  (+15 more)
backend/data/: group.csv
backend/users/: admin.py  authentication.py  consts.py  models.py  passwordvalidators.py  tokens.py  urls.py  validators.py
docs/: codestyle.md  dev_rules.md
infra/: .env_example  Dockerfile_front  default.conf.template  docker-compose.yml  env_example  nginx.conf  template.env
infra/frontend-shared/: index.html
infra/frontend_shared/: index.html
(+50 files in other folders)
